add the ModelMapper dependency (v3.0.0) and map the Expense Entity to Expense DTO in the service

--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,13 @@
             <scope>annotationProcessor</scope>
         </dependency>
 
+        <!-- model mapper       -->
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+
         <!-- test -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
