add mysql connector dependency and config data sources for connecting to database and create expense controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=ExpenseManager
+
+spring.datasource.url=jdbc:mysql://localhost:3306/expensemanager
+spring.datasource.username=springstudent
+spring.datasource.password=springstudent
+
+# this is not a best practice to use it in production mode!
+spring.jpa.hibernate.ddl-auto=update
